merged into 3.0.1: bug fix #459 changeset [11036]